# volcanoz

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/dataset/: volcano.schema.json
app/scraper/: scraper.py
app/transformer/: transformer.py
