[project]
name = "volcanoz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "tqdm",
    "beautifulsoup4",
    "requests",
    "matplotlib",
]

[project.optional-dependencies]
scraping = ["requests", "beautifulsoup4", "wikipedia-api"]


